Fix slider overlaps introduction text.

--- a/css/menu_sideslide.css
+++ b/css/menu_sideslide.css
@@ -210,3 +210,7 @@ button:focus{
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
+
+#carousel-slider .carousel-control-prev {
+	width: 12%;
+}
